Fixing mobile spacing

--- a/app/css/sections/_science-of-allergic-rhinitis.scss
+++ b/app/css/sections/_science-of-allergic-rhinitis.scss
@@ -121,6 +121,7 @@
             }
             @media screen and (max-width: 900px) {
               font-size: 120px;
+              line-height: 120px;
             }
           }
           sup{
